Fixed small gap at bottom of screen

--- a/app.css
+++ b/app.css
@@ -9608,8 +9608,8 @@ html {
 
 .wiscviewer-content-container {
   height: 100%;
-  margin-top: -52px;
-  padding-top: 52px; }
+  margin-top: -50px;
+  padding-top: 50px; }
 
 .wiscviewer-map-container {
   height: 100%;
